--- a/app/views/flights/_search_form.html.erb
+++ b/app/views/flights/_search_form.html.erb
@@ -8,6 +8,6 @@
  :start_date_formated) %>
 
  <%=label_tag :passengers %>
- <%= select_tag 'Passengers', options_for_select(["1","2","3","4"],"1") %>
+ <%= select_tag 'passengers', options_for_select(["1","2","3","4"],"1") %>
  <%= submit_tag 'Search', {class: 'btn btn-primary'} %>
 <% end %>
