--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,30 +1,52 @@
-new booking
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class="form-group panel panel-default">
+      <table class='table '>
+        <div class="panel-heading">
+          <div class="panel-title" style="text-align: center">
+            <h1>Your flight</h1>
+          </div>
+          <tr>
+            <th>From</th><th>To</th><th>Departure</th><th>Hour</th>
+          </tr>
+        </div>
 
-    <div class = 'form-flight' >
-  	  <%= @flight.id %>
-  	  <%= @flight.from_airport.airport_code %>
-  	  <%= @flight.to_airport.airport_code %>
-      <%= @flight.start_date.to_date %>
-      <%= @flight.start_hour %>
-    </div><br>
+        <tbody class="panel-body">
+          <tr>
+            <td> <%= @flight.from_airport.airport_code %> </td>
+            <td> <%= @flight.to_airport.airport_code %> </td>
+            <td> <%= @flight.start_date.to_date %> </td>
+            <td> <%= @flight.start_hour %> </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <br />
 
-<%= form_for @booking do |f| %>
-  <%= f.hidden_field :flight_id, :value => @flight.id %>
-  <%= f.hidden_field :num_of_pass, :value => @num_of_pass %>
+    <% passanger_num = 1 %>
+    <h2 class="page-header">Please enter the details for <%= 'passenger'.pluralize(params[:passangers].to_i) %>:</h2>
+
+    <%= form_for @booking, class: 'form-horizontal' do |f| %>
+      <%= f.hidden_field :flight_id, :value => @flight.id %>
+      <%= f.hidden_field :num_of_pass, :value => @num_of_pass %>
   
-    <% num_of_pass= 1  %>
-      
-      <%= f.fields_for :passengers do |passenger_fields| %>
-        <h3>Passenger<%= num_of_pass%></h3>
-          <% num_of_pass+=1 %>
-        <%= passenger_fields.label :name %> 
-        <%= passenger_fields.text_field :name, class: 'form-control' %><br>
+      <% num_of_pass= 1  %>
 
-        <%= passenger_fields.label :email %> 
-        <%= passenger_fields.email_field :email, class: 'form-control' %>
-      <% end %>   
-    
-   
-  <br>
-  <%= f.submit 'Create booking', class: 'btn btn-primary' %>
-<% end %>
+      <%= f.fields_for :passengers do |passenger_fields| %>
+        <h3>Passenger <%= num_of_pass %> </h3>
+        <% num_of_pass += 1 %>
+        <div class="form-group">
+          <%= passenger_fields.label :name %>
+          <%= passenger_fields.text_field :name, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= passenger_fields.label :email %>
+          <%= passenger_fields.email_field :email, class: 'form-control' %>
+        </div>
+
+      <% end %>  
+
+      <%= f.submit "Book", class: 'btn btn-primary btn-block' %>
+    <% end %>
+  </div>
+</div>
