--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,3 +1,36 @@
-Booking show
-
-<%= @booking.id  %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <div class='panel panel-info'>
+      <div class="panel-heading">
+        <h2 class= 'centered'>Your Booking is Complete!</h2>
+      </div>
+      <div class="panel-body">
+        <dl class="dl-horizontal">
+          <dt> From </dt> <dd><%= @booking.flight.from_airport.airport_code %></dd>
+          <dt> To </dt> <dd><%= @booking.flight.to_airport.airport_code %> </dd>
+          <dt> Departure </dt>
+            <dd><%= @booking.flight.start_date
+                    .strftime("#{@booking.flight.start_hour} - #{@booking.flight.start_date.day.ordinalize} %B %Y")%>
+            </dd>
+        </dl>
+      </div>
+      <table class="table centered">
+        <tr>
+          <th class="centered"><%= 'Passenger'.pluralize(@booking.passengers.count) %>:</th>
+        </tr>
+        <tbody>
+          <% pas_count = 0 %>
+          <% @booking.passengers.each do |pas| %>
+          <% pas_count += 1 %>
+          <tr>
+            <td><%= pas_count %></td><td><%= pas.name %></td><td><%= pas.email %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <div class="panel-footer">
+        <h5 class="centered"><i class="fa fa-copyright" aria-hidden="true"></i> Flight Booker </h5>
+      </div>
+    </div>
+  </div>
+</div>
