--- a/app/views/flights/_search_form.html.erb
+++ b/app/views/flights/_search_form.html.erb
@@ -1,13 +1,31 @@
-<%= form_tag(flights_path, method: 'get') do %>
-  <%= label_tag :from %>
- <%=  select_tag 'from', options_from_collection_for_select(Airport.all ,:id, :airport_code, {class: "form-control"}) %>
- <%= label_tag :to %>
- <%= select_tag 'to', options_from_collection_for_select( Airport.all ,:id, :airport_code, {class: "form-control"}) %>
- <%= label_tag :date %>
- <%= select_tag "start_date" , options_from_collection_for_select(Flight.get_flight_dates, 'start_date',
- :start_date_formated) %>
-
- <%=label_tag :passengers %>
- <%= select_tag 'passengers', options_for_select(["1","2","3","4"],"1") %>
- <%= submit_tag 'Search', {class: 'btn btn-primary'} %>
-<% end %>
+	<%= form_tag(flights_path, method: :get, class: 'form-horizontal') do %>
+        <div class="form-group">
+          <%= label_tag(:from, nil, class: 'col-sm-3 control-label') %>
+          <div class="col-sm-9">
+            <%= select_tag 'from', options_from_collection_for_select(@airport_options ,:id, :airport_code), class: "form-control" %>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= label_tag( :to, nil, class: 'col-sm-3 control-label') %>
+          <div class="col-sm-9">
+            <%= select_tag 'to', options_from_collection_for_select(@airport_options,:id, :airport_code), class: "form-control" %>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= label_tag :date, nil, class: 'col-sm-3 control-label' %>
+          <div class="col-sm-9">
+            <%= select_tag 'start_date', options_from_collection_for_select(Flight.get_flight_dates, 'start_date',:start_date_formated), class: 'form-control' %>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= label_tag :passengers, nil, class: 'col-sm-3 control-label' %>
+          <div class="col-sm-9">
+            <%= select_tag 'passengers', options_for_select(["1","2","3","4"]), class: 'form-control'  %>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-3 col-sm-9">
+            <%= submit_tag 'Search', class: "btn btn-primary btn-block" %>
+          </div>
+        </div>
+    <% end %>
