--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,8 +1,11 @@
-Flights index
-<%= render 'search_form' %>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <h1 class="col-sm-offset-3 col-sm-9 centered">Flight Booking</h1>
+      <%= render 'search_form' %>
 
-<% if @flights.present? %>
-<%= render 'search_results' %>
-<% end %>
+    <% unless @flights.nil? || @flights.size == 0 %>
 
-
+      <%= render 'search_results' %>
+    <% end %>
+  </div>
+</div>
