flight controller flash message add

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -7,7 +7,7 @@
             <h1>Your flight</h1>
           </div>
           <tr>
-            <th>From</th><th>To</th><th>Departure</th><th>Hour</th>
+            <th>From</th><th>To</th><th>Departure Date</th><th>Departure Hour</th>
           </tr>
         </div>
 
